Fixes category header syntax and link alignment.

--- a/myuw_mobile/static/css/mobile.less
+++ b/myuw_mobile/static/css/mobile.less
@@ -133,7 +133,15 @@ body {
         }
             
     }
-
+    
+    // category pages
+    
+    .category-content { margin-bottom: 2em; 
+        
+        .category-header { }
+        .category-sub-header { color: #666; }
+        .category-links { padding-left: 0; }
+    }
     
     
 }
